Half of the Display settings from object tab not working for Armature objects / Bones #30614

Closed
opened 2012-03-20 23:49:14 +01:00 by CodeManX · 9 comments
Member

%%%(screenshots also attached)

Some Armature / Bone drawing options seem to be not implemented:

Bounds: box --> bbox encloses the first bone only
http://www.pasteall.org/pic/show.php?id=28850

Type: bounds --> draws like wireframe instead of bbox
http://www.pasteall.org/pic/show.php?id=28851

Object.show_wire = True won't draw Bones as wireframes, but as solid without orange outline. Bone.show_wire with a custom_shape bone draws wireframe as expected, Object > Display > Wire should do the same
http://www.pasteall.org/pic/show.php?id=28852

Btw. an Armature object color can be set, but won't show. Color picker could be disabled if not supported.%%%

%%%(screenshots also attached) Some Armature / Bone drawing options seem to be not implemented: Bounds: box --> bbox encloses the first bone only http://www.pasteall.org/pic/show.php?id=28850 Type: bounds --> draws like wireframe instead of bbox http://www.pasteall.org/pic/show.php?id=28851 Object.show_wire = True won't draw Bones as wireframes, but as solid without orange outline. Bone.show_wire with a custom_shape bone draws wireframe as expected, Object > Display > Wire should do the same http://www.pasteall.org/pic/show.php?id=28852 Btw. an Armature object color can be set, but won't show. Color picker could be disabled if not supported.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Bastien, can you look into this?%%%

%%%Bastien, can you look into this?%%%

%%%Ok, so here are my conclusions for now:

  • There was simply no boundbox implemented for armatures (the cube is a dummy (-1,-1,-1,1,1,1) one, nothing to see with first bone ;) ). So in attached patch I added a simple one, only enabled in Object mode (i.e. in edit/pose ones, you’ll still get the bones in wireframe, as imho boundbox is stupid in those modes).

  • Object.show_wire and color were enabled for all objects, restricted those to only MESH, CURVE, SURFACE, FONT and META, as imho they do not make any sense for the other types!

Will try to get a review (or at least some approval) soon.%%%

%%%Ok, so here are my conclusions for now: * There was simply no boundbox implemented for armatures (the cube is a dummy (-1,-1,-1,1,1,1) one, nothing to see with first bone ;) ). So in attached patch I added a simple one, only enabled in Object mode (i.e. in edit/pose ones, you’ll still get the bones in wireframe, as imho boundbox is stupid in those modes). * Object.show_wire and color were enabled for all objects, restricted those to only MESH, CURVE, SURFACE, FONT and META, as imho they do not make any sense for the other types! Will try to get a review (or at least some approval) soon.%%%
Author
Member

%%%From my side, i'm fine with your changes :)

Thank you Bastien!%%%

%%%From my side, i'm fine with your changes :) Thank you Bastien!%%%

%%%Committed in svn45084 (aligorith was ok with it too).

Thanks for reporting!%%%

%%%Committed in svn45084 (aligorith was ok with it too). Thanks for reporting!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%In Blender 2.63 official, bounding box doesn't seem to work at all. It's not showing anything, not even the dummy cube. Something went wrong with bounding box code?%%%

%%%In Blender 2.63 official, bounding box doesn't seem to work at all. It's not showing anything, not even the dummy cube. Something went wrong with bounding box code?%%%

%%%Nope, it works, afaik… Note that:
*It’s only visible in Object mode
*You must have several unaligned bones (or one bone not aligned with armature axis), else (as bones themselves have no width) you only get a line…%%%

%%%Nope, it works, afaik… Note that: *It’s only visible in Object mode *You must have several unaligned bones (or one bone not aligned with armature axis), else (as bones themselves have no width) you only get a line…%%%
Author
Member

%%%you're right, i was actually getting a thin (z-fightening) line and did not notice it was there. Works as intended.%%%

%%%you're right, i was actually getting a thin (z-fightening) line and did not notice it was there. Works as intended.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30614
No description provided.