Fix [#30614] (some Display settings are uneeded for non-geometry/material object types, and armature have no boundbox).

This commit:
* Removes the Wire and Color options from the UI for all object types but meshes, curves/surfaces/texts, and metas.
* Adds a basic bounding box drawing (and computing) for armatures.