source/blender/blenkernel/BKE_armature.h
@@ -82,6 +82,9 @@ void free_armature(struct bArmature *arm);
 void make_local_armature(struct bArmature *arm);
 struct bArmature *copy_armature(struct bArmature *arm);
 
+/* Bounding box. */
+struct BoundBox *BKE_armature_get_bb(struct Object *ob);
+
 int bone_autoside_name (char name[64], int strip_number, short axis, float head, float tail);
 
 struct Bone *get_named_bone (struct bArmature *arm, const char *name);
