source/blender/editors/space_view3d/drawobject.c
@@ -56,6 +56,7 @@
 #include "BLI_utildefines.h"
 
 #include "BKE_anim.h"			//for the where_on_path function
+#include "BKE_armature.h"
 #include "BKE_camera.h"
 #include "BKE_constraint.h" // for the get_constraint_target function
 #include "BKE_curve.h"
@@ -6134,6 +6135,9 @@ static void draw_bounding_volume(Scene *scene, Object *ob, char type)
 			}
 		}
 	}
+	else if (ob->type == OB_ARMATURE) {
+		bb = BKE_armature_get_bb(ob);
+	}
 	else {
 		drawcube();
 		return;
@@ -6715,10 +6719,20 @@ void draw_object(Scene *scene, ARegion *ar, View3D *v3d, Base *base, int flag)
 			}
 			break;
 		case OB_ARMATURE:
-			if ((v3d->flag2 & V3D_RENDER_OVERRIDE)==0) {
-				if (dt>OB_WIRE) GPU_enable_material(0, NULL); // we use default material
-				empty_object= draw_armature(scene, v3d, ar, base, dt, flag, FALSE);
-				if (dt>OB_WIRE) GPU_disable_material();
+			if ((v3d->flag2 & V3D_RENDER_OVERRIDE) == 0) {
+				/* Do not allow boundbox in edit nor pose mode! */
+				if ((dt == OB_BOUNDBOX) && (ob->mode & (OB_MODE_EDIT | OB_MODE_POSE)))
+					dt = OB_WIRE;
+				if (dt == OB_BOUNDBOX) {
+					draw_bounding_volume(scene, ob, ob->boundtype);
+				}
+				else {
+					if (dt>OB_WIRE)
+						GPU_enable_material(0, NULL); /* we use default material */
+					empty_object = draw_armature(scene, v3d, ar, base, dt, flag, FALSE);
+					if (dt>OB_WIRE)
+						GPU_disable_material();
+				}
 			}
 			break;
 		default:
